infra/k8s/quart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quart-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quart
  template:
    metadata:
      labels:
        app: quart
    spec:
      containers:
        - name: quart
          image: khaclub/quart
          imagePullPolicy: "Never"
          resources:
            requests:
              cpu: "500m"
              memory: "200Mi"
            limits:
              cpu: "700m"
              memory: "300Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: quart-clusterip-srv
spec:
  selector:
    app: quart
  ports:
    - name: quart
      protocol: TCP
      port: 4000
      targetPort: 4000
