infra/k8s/time-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: time
  template:
    metadata:
      labels:
        app: time
    spec:
      containers:
        - name: time
          image: khaclub/time:latest
          imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: time-srv
spec:
  selector:
    app: time
  ports:
    - name: time
      protocol: TCP
      port: 4001
      targetPort: 4001
