infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rps: '5'
    nginx.ingress.kubernetes.io/limit-rpm: '60'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - pathType: Prefix
            path: /posts/?(.*)
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000

          - pathType: Prefix
            path: /time/?(.*)
            backend:
              service:
                name: time-srv
                port:
                  number: 4001

          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
